--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <title>Bootstrap in action</title>
 </head>
 <body>
-<div th:fragment="footer">
-    <a href="https://github.com/yikeso">Welcome to yikeso</a>
-</div>
+
+ <footer class="blog-footer bg-inverse" data-th-fragment="footer">
+   <p>Welcome to <a href="https://waylau.com">waylau.com</a></p>
+     <!-- JavaScript -->
+     <script src="../../js/jquery-3.1.1.min.js" th:src="@{/js/jquery-3.1.1.min.js}"></script>
+     <script src="../../js/jquery.form.min.js" th:src="@{/js/jquery.form.min.js}"></script>
+     <script src="../../js/tether.min.js" th:src="@{/js/tether.min.js}"></script>
+     <script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+     <script src="../../js/nprogress.js" th:src="@{/js/nprogress.js}"></script>
+     <script src="../../js/thinker-md.vendor.min.js" th:src="@{/js/thinker-md.vendor.min.js}"></script>
+     <script src="../../js/jquery.tag-editor.min.js" th:src="@{/js/jquery.tag-editor.min.js}"></script>
+     <script src="../../js/chosen.jquery.js" th:src="@{/js/chosen.jquery.js}"></script>
+     <script src="../../js/toastr.min.js" th:src="@{/js/toastr.min.js}"></script>
+     <script src="../../js/cropbox.js" th:src="@{/js/cropbox.js}"></script>
+     <script src="../../js/thymeleaf-bootstrap-paginator.js" th:src="@{/js/thymeleaf-bootstrap-paginator.js}"></script>
+     <script src="../../js/catalog-generator.js" th:src="@{/js/catalog-generator.js}"></script>
+     <script src="../../js/main.js" th:src="@{/js/main.js}"></script>
+ </footer>
+
 </body>
 </html>
