--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
+	  xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+<head data-th-fragment="headerTag">
+    <meta charset="utf-8" />
+
+	<!-- CSRF -->
+	<meta name="_csrf" th:content="${_csrf.token}"/>
+	<!-- default header name is X-CSRF-TOKEN -->
+	<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<title th:text="${title}">Title</title>
+	<!-- Tether core CSS -->
+	<link href="../../css/tether.min.css" th:href="@{/css/tether.min.css}" rel="stylesheet" />
+	<!-- Bootstrap CSS -->
+	<link href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+	<!-- Font-Awesome CSS -->
+	<link href="../../css/font-awesome.min.css" th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
+	<!-- NProgress CSS -->
+	<link href="../../css/nprogress.css" th:href="@{/css/nprogress.css}" rel="stylesheet" />
+	<!-- thinker-md CSS -->
+	<link href="../../css/thinker-md.vendor.css" th:href="@{/css/thinker-md.vendor.css}" rel="stylesheet" />
+	<!-- bootstrap tags CSS -->
+	<link href="../../css/component-tageditor.css" th:href="@{/css/component-tageditor.css}" rel="stylesheet" />
+	<!-- bootstrap chosen CSS -->
+	<link href="../../css/component-chosen.min.css" th:href="@{/css/component-chosen.min.css}" rel="stylesheet" />
+	<!-- toastr CSS -->
+	<link href="../../css/toastr.min.css" th:href="@{/css/toastr.min.css}" rel="stylesheet" />
+	<!-- jQuery image cropping plugin CSS -->
+	<link href="../../css/cropbox.css" th:href="@{/css/cropbox.css}" rel="stylesheet" />
+	<!-- Custom styles -->
+	<link href="../../css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+	<link href="../../css/thymeleaf-bootstrap-paginator.css" th:href="@{/css/thymeleaf-bootstrap-paginator.css}"
+		  rel="stylesheet" />
+	<link href="../../css/blog.css" th:href="@{/css/blog.css}" rel="stylesheet" />
+	<script language="javascript">
+		if(top.location!==self.location){
+			top.location.href=self.location.href;
+		}
+	</script>
 </head>
 <body>
-<div th:fragment="header">
-    <h1>
-    <a href="/users" th:href="@{~/users}">首页</a>
-    </h1>
-</div>
+	<div class="blog-masthead" data-th-fragment="header">
+	    <div class="container">
+	    <div class="row" >
+	 		<h1>Bootstrap in action</h1>
+	 
+	        <nav class="nav blog-nav">
+	          <a class="nav-link active" href="/users">首页</a>
+	          <a class="nav-link" href="/users">其他</a>
+	        </nav>
+		</div>
+	    </div>
+    </div>
 </body>
 </html>
