--- a/src/main/resources/templates/users/form.html
+++ b/src/main/resources/templates/users/form.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 <div th:replace="fragments/header::header"></div>
+<div class="container blog-content-container">
 <form action="/users/form" method="post" th:action="@{~/users/form}" th:Object="${user}">
     <input name="id" type="hidden" th:value="*{id}" />
-    <p>用户名：<input name = "name" type="text" th:value="*{name}" /></p>
-    <p>邮箱：<input name="email" type="email" th:value="*{email}" /></p>
+    <p>用户名：<input class="form-control" name = "name" type="text" th:value="*{name}" /></p>
+    <p>邮箱：<input class="form-control" name="email" type="email" th:value="*{email}" /></p>
     <input name="createTime" type="hidden" th:value="*{createTime == null?#dates.createNow():createTime}" />
     <p th:text="${errorMessage}"></p>
-    <input type="submit" value="提交" />
+    <input class="btn btn-default" type="submit" value="提交" />
 </form>
+</div>
 <div th:replace="fragments/footer::footer"></div>
 </body>
 </html>
