--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 <div th:replace="fragments/header::header"></div>
+<div class="container blog-content-container">
 <h3 th:text="${title}">页面标题</h3>
 <div>
-    <a href="form.html" th:href="@{/users/form}">创建用户</a>
+    <a class="btn btn-default" href="form.html" th:href="@{/users/form}">创建用户</a>
 </div>
-<table border="1">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>ID</th>
@@ -29,6 +30,7 @@
         </tr>
     </tbody>
 </table>
+</div>
 <div th:replace="fragments/footer::footer"></div>
 </body>
 </html>
