--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"
 	  xmlns:th="http://www.thymeleaf.org"
-	  xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+	  xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head data-th-fragment="headerTag">
     <meta charset="utf-8" />
 
 	<!-- CSRF -->
-	<meta name="_csrf" th:content="${csrfToken}"/>
+	<meta name="_csrf" th:content="${_csrf.token}"/>
+	<!-- default header name is X-CSRF-TOKEN -->
+	<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<title th:text="${title}">Title</title>
@@ -54,6 +57,20 @@
                         <a href="/list.html" th:href="@{~/users}">首页</a>
                     </li>
                 </ul>
+				<div sec:authorize="isAuthenticated()" class="row">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <span class="nav-link" sec:authentication="name"></span>
+                        </li>
+                    </ul>
+                    <form th:action="@{~/logout}" method="post">
+                        <input type="submit" class="btn btn-outline-success" value="退出" />
+                    </form>
+                </div>
+                <div sec:authorize="isAnonymous()">
+                    <a href="/login.html" th:href="@{~/login}"
+                       class="btn btn-outline-success my-2 my-sm-0" type="submit">登录</a>
+                </div>
 			</div>
 		</div>
 	</nav>
